# hellode

./: README.md  pyproject.toml  setup.cfg
src/hellode/: hello_de_type.py
