[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "hellode"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Michal", email = "michalw.mail@gmail.com"},
    {name = "Michał Wierzbowski", email = "michal.wierzbowski@stxnext.pl"},
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "requests>=2.32.3"
]
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "flake8>=5.0.4",
]


