[project]
name = "hellode"
version = "0.1.0"
description = ""
authors = [
    {name = "Michal", email = "michalw.mail@gmail.com"},
    {name = "Michał Wierzbowski", email = "michal.wierzbowski@stxnext.pl"},
]
dependencies = [
    "requests>=2.32.3"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.setuptools.packages.find]
dev = [
    "flake8>=5.0.4",
]


